--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<button class="theme-toggle">
 								<span class="theme-toggle__icon">
 									<!-- Sun Icon -->
-									<svg
+									<!-- <svg
 										xmlns="http://www.w3.org/2000/svg"
 										viewBox="0 0 24 24"
 										fill="#ebaf26"
@@ -71,10 +71,10 @@
 										<path
 											d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.894 6.166a.75.75 0 00-1.06-1.06l-1.591 1.59a.75.75 0 101.06 1.061l1.591-1.59zM21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75zM17.834 18.894a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 10-1.061 1.06l1.59 1.591zM12 18a.75.75 0 01.75.75V21a.75.75 0 01-1.5 0v-2.25A.75.75 0 0112 18zM7.758 17.303a.75.75 0 00-1.061-1.06l-1.591 1.59a.75.75 0 001.06 1.061l1.591-1.59zM6 12a.75.75 0 01-.75.75H3a.75.75 0 010-1.5h2.25A.75.75 0 016 12zM6.697 7.757a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 00-1.061 1.06l1.59 1.591z"
 										/>
-									</svg>
+									</svg> -->
 
 									<!-- Moon Icon -->
-									<!-- <svg
+									<svg
 										xmlns="http://www.w3.org/2000/svg"
 										viewBox="0 0 24 24"
 										fill="#6d7175"
@@ -84,23 +84,169 @@
 											d="M9.528 1.718a.75.75 0 01.162.819A8.97 8.97 0 009 6a9 9 0 009 9 8.97 8.97 0 003.463-.69.75.75 0 01.981.98 10.503 10.503 0 01-9.694 6.46c-5.799 0-10.5-4.701-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 01.818.162z"
 											clip-rule="evenodd"
 										/>
-									</svg> -->
+									</svg>
 								</span>
 							</button>
 						</li>
 						<li><a href="#">Log in</a></li>
-						<li><a href="#">Sign Up</a></li>
+						<li><a href="#">Sign up</a></li>
 					</ul>
 				</div>
 			</nav>
 		</header>
 
-		<!-- <main>
-			<h1 class="main__heading">
-				Build anything.
-				<br />
-				Reimagine commerce.
-			</h1>
-		</main> -->
+		<main>
+			<section class="hero">
+				<div class="hero__content">
+					<h1 class="hero__heading">
+						Build anything.
+						<br />
+						Reimagine commerce.
+					</h1>
+					<p class="hero__description">
+						Millions of merchants trust Shopify to run their business—but they
+						need developers to build the tools that help them achieve
+						independence. Access powerful APIs to bring your ideas to life on
+						the platform that makes commerce better for everyone.
+					</p>
+
+					<div class="gutter-bottom">
+						<h3>Develop apps that solve complex merchant problems</h3>
+						<p>
+							Expansive
+							<a href="https://shopify.dev/api/admin/graphql">GraphQL</a> and
+							<a href="https://shopify.dev/api/admin/rest">REST APIs</a> let you
+							integrate into Shopify's admin, online store, checkout, and more.
+						</p>
+					</div>
+
+					<div class="gutter-bottom">
+						<h3>Integrate seamlessly into existing workflows</h3>
+						<p>
+							Embed your app's features with
+							<a href="https://shopify.dev/apps/tools/app-bridge">App Bridge</a
+							>. Create high quality experiences with the ready-to-build
+							<a href="https://polaris.shopify.com/">Polaris</a> component
+							library.
+						</p>
+					</div>
+
+					<div class="gutter-bottom">
+						<h3>Help merchants express themselves</h3>
+						<p>
+							Use <a href="https://shopify.dev/api/liquid">Liquid</a> to build
+							beautiful theme templates. Get started with
+							<a href="https://shopify.dev/themes/tools/dawn">Dawn</a>, our
+							blazingly fast, accessible reference theme.
+						</p>
+					</div>
+
+					<div class="gutter-bottom">
+						<h3>Ship custom shopping experiences</h3>
+						<p>
+							Add Shopify to any web, mobile, or gaming experience with the
+							powerful
+							<a href="https://shopify.dev/api/storefront">Storefront API</a>
+							and SDKs, plus any front-end stack you want. Use
+							<a href="https://shopify.dev/marketplaces">Marketplace Kit</a> to
+							connect your platform and its users to millions of Shopify
+							merchants and their products.
+						</p>
+					</div>
+
+					<div>
+						<h3>Start building:</h3>
+
+						<div class="hero-links__container">
+							<a href="#">
+								<div class="docs-card">
+									<div class="docs-card__icon">
+										<img src="./img/app.png" alt="" />
+									</div>
+									<p class="docs-card__title">Apps</p>
+								</div>
+							</a>
+
+							<a href="#">
+								<div class="docs-card">
+									<div class="docs-card__icon">
+										<img src="./img/themes.png" alt="" />
+									</div>
+									<p class="docs-card__title">Themes</p>
+								</div>
+							</a>
+
+							<a href="#">
+								<div class="docs-card">
+									<div class="docs-card__icon">
+										<img src="./img/custom-storefronts.png" alt="" />
+									</div>
+									<p class="docs-card__title">Storefronts</p>
+								</div>
+							</a>
+
+							<a href="#">
+								<div class="docs-card">
+									<div class="docs-card__icon">
+										<img src="./img/marketplaces.png" alt="" />
+									</div>
+									<p class="docs-card__title">Marketplaces</p>
+								</div>
+							</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="hero__illustration"></div>
+			</section>
+
+			<section class="docs-banner">
+				<div class="docs-banner__container">
+					<div>
+						<h2 class="docs-banner__title gutter-bottom">Launch your app or theme to millions of merchants</h2>
+						<div class="gutter-bottom">
+							<h3>App Store</h3>
+							<p>
+								Get your app in front of the right merchants. With personalized
+								recommendations and multiple billing options, the
+								<a href="#">Shopify App Store</a> is where merchants go to find
+								the apps their business needs most.
+							</p>
+						</div>
+
+						<div class="gutter-bottom">
+							<h3>Theme Store</h3>
+							<p>
+								Sell your theme to merchants building their brands on the
+								<a href="#">Shopify Theme Store</a>, which offers flexible
+								pricing and targeted merchandising.
+							</p>
+						</div>
+					</div>
+
+					<ul class="stats-box__container">
+						<li class="stats-box__row">
+							<img src="./img/app.png" alt="" />
+							<p>
+								<strong>$12.5B USD</strong><br />
+								Revenue generated from the Shopify ecosystem (2020)
+							</p>
+						</li>
+
+						<li class="stats-box__row">
+							<img src="./img/app.png" alt="" />
+							<p><strong>3 in 4 mechants use apps</strong></p>
+						</li>
+
+						<li class="stats-box__row">
+							<img src="./img/app.png" alt="" />
+							<p>
+								<strong>Average number of apps installed per merchant</strong>
+							</p>
+						</li>
+					</ul>
+				</div>
+			</section>
+		</main>
 	</body>
 </html>
