Make post navigation content and layout responsive on tablet and mobile screens

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<li><a href="#">Custom storefronts</a></li>
 						<li><a href="#">Marketplaces</a></li>
 						<li>
-							<a href="#" data-dropdown
+							<a data-dropdown
 								>APIs and references
 								<svg
 									xmlns="http://www.w3.org/2000/svg"
@@ -147,6 +147,8 @@
 						the platform that makes commerce better for everyone.
 					</p>
 
+					<!-- <div class="hero__illustration-2--mobile"></div> -->
+
 					<div class="gutter-bottom">
 						<h3>Develop apps that solve complex merchant problems</h3>
 						<p>
@@ -191,7 +193,7 @@
 						</p>
 					</div>
 
-					<div>
+					<div class="hero__features">
 						<h3>Start building:</h3>
 
 						<div class="hero-links__container">
@@ -235,7 +237,10 @@
 				</div>
 
 				<div class="hero__illustration"></div>
+				<div class="hero__illustration--mobile"></div>
 			</section>
+
+			<div class="hero__illustration-3--mobile"></div>
 
 			<section class="docs-banner">
 				<div class="docs-banner__container">
